tests/cases/standard-library/ok/string/std-string-equals.ari
fn main() -> i64 {
  var zone = zone::create(128);
  var text = std::string::from_string(ref mut zone, "compiler");
  var same = std::string::from_string(ref mut zone, "compiler");
  var shorter = std::string::from_string(ref mut zone, "compile");
  var different = std::string::from_string(ref mut zone, "compiles");
  var empty = std::string::new(ref mut zone, 0);

  let same_view = same.as_slice();
  let shorter_view = shorter.as_slice();
  let different_view = different.as_slice();
  let empty_view = empty.as_slice();

  let a = if text.equals(same_view) { 11 } else { 0 };
  let b = if text.equals(shorter_view) { 0 } else { 13 };
  let c = if text.equals(different_view) { 0 } else { 17 };
  let d = if empty.equals(empty_view) { 19 } else { 0 };

  text.push_in(ref mut zone, 33u8);
  let e = if text.equals(same_view) { 0 } else { 23 };

  zone::destroy(zone);
  return a + b + c + d + e;
}
