tests/cases/standard-library/errors/std-vec-if-handle-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(128);
  let left = std::vec::new<i64>(ref mut zone, 1);
  let right = std::vec::new<i64>(ref mut zone, 1);
  let chosen = if 1 {
    left
  } else {
    right
  };
  zone::reset(ref mut zone);
  let value = chosen.len();
  zone::destroy(zone);
  value
}
